--- a/index.html
+++ b/index.html
@@ -19,7 +19,83 @@
       <a href="" class="header--button">Conoce Nuestros Planes <span></span> </a>
     </div>
   </header>
-  <main></main>
+  <main>
+    <section class="main-exchange-container">
+      <div class="bitcoin-img-bg"></div>
+      <div class="main-excahange-container--title">
+        <h2>Visibilizamos todas las tasas de cambio</h2>
+        <p>Traemos informacion en tiempo real de las tasas de cambio y las monedas mas importantes del mundo.</p>
+      </div>
+      <section class="main-exchange-tables-container">
+        <div class="main-currency-table">
+          <p class="currency-table--title">Monedas</p>
+          <div class="currency-table--container">
+            <table>
+              <tr>
+                <td class="table__top-left">Bitcoin</td>
+                <td class="table__top-right table__right">$1.96 <span class="down"></span></td>
+              </tr>
+              <tr>
+                <td>Ethreum</td>
+                <td class="table__right">$0.07 <span class="up"></span></td>
+              </tr>
+              <tr>
+                <td>Ripple</td>
+                <td class="table__right">$2.15 <span class="down"></span></td>
+              </tr>
+              <tr>
+                <td class="table__bottom-left">Steallar</td>
+                <td class="table__bottom-right table__right">$4.96 <span class="down"></span></td>
+              </tr>
+            </table>
+          </div>
+          <div class="currency-table--date">
+            <p><b>Actualizado:</b> 19 de Julio 23:45</p>
+          </div>
+        </div>
+        <div class="main-comision-table">
+          <p class="comision-table--title">Comisiones</p>
+          <div class="comision-table--container">
+            <table>
+              <tr>
+                <td class="table__top-left">Bitrade</td>
+                <td class="table__top-right table__right">$12.96</td>
+              </tr>
+              <tr>
+                <td>Bitpreco</td>
+                <td class="table__right">$13.07</td>
+              </tr>
+              <tr>
+                <td>Novadax</td>
+                <td class="table__right">$13.15</td>
+              </tr>
+              <tr>
+                <td class="table__bottom-left">Coinext</td>
+                <td class="table__bottom-right table__right">$14.96</td>
+              </tr>
+            </table>
+          </div>
+          <div class="comision-table--date">
+            <p><b>Actualizado:</b> 19 Julio 23:48</p>
+          </div>
+        </div>
+      </section>
+    </section>
+    <section class="main-product-detail">
+      <span></span>
+      <div>
+        <h2>Creamos un producto sin comparación.</h2>
+        <p>Confiable y diseñado para su uso diario.</p>
+      </div>
+      <section class="product-cards--container">
+        <article class="product-detail--card">
+          <span class="clock"></span>
+          <p class="product--card-title">Tiempo real</p>
+          <p class="product--card-body">Nuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento.</p>
+        </article>
+      </section>
+    </section>
+  </main>
   <footer></footer>
 </body>
 </html>
