--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="header--title-container">
       <h1>La proxima revolucion en el intercambio de criptomonedas.</h1>
       <p>Batabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
-      <a href="" class="header--button">Conoce Nuestros Planes <span></span> </a>
+      <a href="#plans" class="header--button">Conoce Nuestros Planes <span></span> </a>
     </div>
   </header>
   <main>
@@ -112,6 +112,39 @@
     </section>
     <section class="bitcoin-img-container">
       <h2>Conocelo hoy.</h2>
+    </section>
+    <section id="plans" class="main-plans-container">
+      <div class="plans--title" >
+        <h2>Escoge el plan que mejor se ajuste a ti.</h2>
+        <p>Cualquier plan te da acceso completo a nuestra plataforma.</p>
+      </div>
+      <section class="plans-container--slider">
+        <article class="plans-container--card">
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">Pago Mensual</h3>
+            <p class="plan-card--price"><span>$</span> 9 </p>
+            <p class="plan-card--saving">* Ahorras $19 comparado al plan Semanal.</p>
+            <button class="plan-card--call-to-action">Escoger este <span></span></button>
+          </div>
+        </article>
+        <article class="plans-container--card">
+          <p class="recommended">Recomendado</p>
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">Pago Anual</h3>
+            <p class="plan-card--price"><span>$</span> 99 </p>
+            <p class="plan-card--saving">* Ahorras $129 comparado al plan mensual.</p>
+            <button class="plan-card--call-to-action">Escoger este <span></span></button>
+          </div>
+        </article>
+        <article class="plans-container--card">
+          <div class="plan-info-container">
+            <h3 class="plan-card--title">Pago Semanal</h3>
+            <p class="plan-card--price"><span>$</span> 0.9 </p>
+            <br>
+            <button class="plan-card--call-to-action">Escoger este <span></span></button>
+          </div>
+        </article>
+      </section>
     </section>
   </main>
   <footer></footer>
